--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -1,12 +1,47 @@
-﻿<Window x:Class="WpfApp1.MainWindow"
+﻿<Window x:Class="TheMovies.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfApp1"
+        xmlns:local="clr-namespace:TheMovies"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
+    <Grid Background="#FF0D6D62">
+        <ListView x:Name="listview" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="340,87,60,61">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn x:Name="grid" Header="Titel" Width="130" />
+
+                    <GridViewColumn x:Name="grid1" Header="Varighed" Width="130"/>
+
+                    <GridViewColumn x:Name="grid2" Header="Genre" Width="130"/>
+                </GridView>
+
+
+            </ListView.View>
+        </ListView>
+
+        <TextBox x:Name="txt" HorizontalAlignment="Left" Margin="133,126,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" />
+
+        <TextBox x:Name="txt1" HorizontalAlignment="Left" Margin="133,173,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" TextChanged="TextBox_TextChanged"/>
+
+        <TextBox x:Name="txt2" HorizontalAlignment="Left" Margin="133,217,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+
+        <Button x:Name="btn1" Content="GEM" HorizontalAlignment="Left" Margin="184,268,0,0" VerticalAlignment="Top" Height="50" Width="101" Click="btn1_Click"/>
+
+
+
+
+
+
+
+
+        <Label x:Name="lbl1" Content="Filmen er gemt!" HorizontalAlignment="Left" Margin="61,280,0,0" VerticalAlignment="Top" Width="92" IsEnabled="False"/>
+        <Label Content="Film" HorizontalAlignment="Left" Margin="524,56,0,0" VerticalAlignment="Top"/>
+        <Label Content="Indtast Film" HorizontalAlignment="Left" Margin="96,56,0,0" VerticalAlignment="Top"/>
+        <Label Content="Titel" HorizontalAlignment="Left" Margin="27,118,0,0" VerticalAlignment="Top"/>
+        <Label Content="Varighed i minutter" HorizontalAlignment="Left" Margin="16,165,0,0" VerticalAlignment="Top"/>
+        <Label Content="Genre" HorizontalAlignment="Left" Margin="27,209,0,0" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
