--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -1,33 +1,41 @@
-﻿<Window x:Class="TheMovies.MainWindow"
+﻿<Window x:Class="WpfApp1.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TheMovies"
+        xmlns:local="clr-namespace:WpfApp1" 
+        xmlns:ViewModels="clr-namespace:WpfApp1.ViewModels"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+    
+<Window.DataContext>
+ <ViewModels:MovieViewModel/>
+ </Window.DataContext>
+    
     <Grid Background="#FF0D6D62">
-        <ListView x:Name="listview" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="340,87,60,61">
+
+        <ListView x:Name="lvMovies" ItemsSource="{Binding Movies}" Margin="340,87,60,61">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn x:Name="grid" Header="Titel" Width="130" />
+                    <GridViewColumn x:Name="colTitle" Header="Titel" Width="130" DisplayMemberBinding="{Binding Title}" />
 
-                    <GridViewColumn x:Name="grid1" Header="Varighed" Width="130"/>
+                    <GridViewColumn x:Name="colDuration" Header="Varighed" Width="130" DisplayMemberBinding="{Binding Duration}" />
 
-                    <GridViewColumn x:Name="grid2" Header="Genre" Width="130"/>
+                    <GridViewColumn x:Name="colGenre" Header="Genre" Width="130" DisplayMemberBinding="{Binding Genre}" />
+                    
                 </GridView>
 
 
             </ListView.View>
         </ListView>
 
-        <TextBox x:Name="txt" HorizontalAlignment="Left" Margin="133,126,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" />
+        <TextBox x:Name="txtTitel" HorizontalAlignment="Left" Margin="133,126,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Text="{Binding Title}" />
 
-        <TextBox x:Name="txt1" HorizontalAlignment="Left" Margin="133,173,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" TextChanged="TextBox_TextChanged"/>
+        <TextBox x:Name="txtDuration" HorizontalAlignment="Left" Margin="133,173,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Text="{Binding Duration}"/>
 
-        <TextBox x:Name="txt2" HorizontalAlignment="Left" Margin="133,217,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="txtGenre" HorizontalAlignment="Left" Margin="133,217,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Text="{Binding Genre}"/>
 
-        <Button x:Name="btn1" Content="GEM" HorizontalAlignment="Left" Margin="184,268,0,0" VerticalAlignment="Top" Height="50" Width="101" Click="btn1_Click"/>
+        <Button x:Name="btnGem" Content="GEM" HorizontalAlignment="Left" Margin="184,268,0,0" VerticalAlignment="Top" Height="50" Width="101" Command="{Binding AddMovieCommand}" />
 
 
 
