--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -3,10 +3,41 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfApp1"
+        xmlns:view="clr-namespace:WpfApp1"  
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="MainWindow" Height="450" Width="500">
 
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="50"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="7*"/>
+                <ColumnDefinition Width="3*"/>
+            </Grid.ColumnDefinitions>
+
+            <DataGrid
+                    ItemsSource="{Binding Items}" 
+                    SelectedItem="{Binding SelectedItem}"
+                    CanUserAddRows="False" CanUserDeleteRows="False"
+                AutoGenerateColumns="False">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Film" Binding="{Binding Film}" Width="4*"/>
+                    <DataGridTextColumn Header="Genre" Binding="{Binding Genre}" Width="4*"/>
+                    <DataGridTextColumn Header="Varighed" Binding="{Binding Varighed}" Width="2*"/>
+                </DataGrid.Columns>
+            </DataGrid>
+
+            <StackPanel Grid.Column="1">
+                <Label Content="Titel"/>
+                <TextBox Margin="5,0,5,15" TextChanged="TextBox_TextChanged" />
+                <Label Content="Genre" />
+                <TextBox Margin="5,0,5,15" Text="{Binding SelectedItem.Genre, UpdateSourceTrigger=PropertyChanged}"/>
+                <Label Content="Varighed"/>
+                <TextBox Margin="5,0,5,15" Text="hello&#xD;&#xA;" />
+            </StackPanel>
+        </Grid>
     </Grid>
 </Window>
