--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -35,7 +35,7 @@
 
         <TextBox x:Name="txtGenre" HorizontalAlignment="Left" Margin="133,217,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Text="{Binding Genre}"/>
 
-        <Button x:Name="btnGem" Content="GEM" HorizontalAlignment="Left" Margin="184,268,0,0" VerticalAlignment="Top" Height="50" Width="101" Command="{Binding AddMovieCommand}" />
+        <Button x:Name="btnGem" Content="GEM" HorizontalAlignment="Left" Margin="184,268,0,0" VerticalAlignment="Top" Height="50" Width="101" Command="{Binding AddMovieCommand}" Click="btnGem_Click" />
 
 
 
@@ -44,7 +44,7 @@
 
 
 
-        <Label x:Name="lbl1" Content="Filmen er gemt!" HorizontalAlignment="Left" Margin="61,280,0,0" VerticalAlignment="Top" Width="92" IsEnabled="False"/>
+        <Label x:Name="lblgemt" Content="Filmen er gemt!" HorizontalAlignment="Left" Margin="61,280,0,0" VerticalAlignment="Top" Width="92" Opacity="0"/>
         <Label Content="Film" HorizontalAlignment="Left" Margin="524,56,0,0" VerticalAlignment="Top"/>
         <Label Content="Indtast Film" HorizontalAlignment="Left" Margin="96,56,0,0" VerticalAlignment="Top"/>
         <Label Content="Titel" HorizontalAlignment="Left" Margin="27,118,0,0" VerticalAlignment="Top"/>
