--- a/WpfApp1/Views/AddMovieWindow.xaml
+++ b/WpfApp1/Views/AddMovieWindow.xaml
@@ -14,7 +14,7 @@
 
     <Grid Background="#FF00175D">
 
-        <ListView x:Name="lvMovies" ItemsSource="{Binding Movies}" Margin="340,87,60,61">
+        <ListView x:Name="lvMovies" ItemsSource="{Binding movies}" Margin="340,87,60,61">
             <ListView.View>
                 <GridView>
                     <GridViewColumn x:Name="colTitle" Header="Titel" Width="130" DisplayMemberBinding="{Binding Title}" />
@@ -30,6 +30,7 @@
         </ListView>
 
         <TextBox x:Name="txtTitel" HorizontalAlignment="Left" Margin="133,126,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Text="{Binding Title}" />
+        
 
         <TextBox x:Name="txtDuration" HorizontalAlignment="Left" Margin="133,173,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Text="{Binding Duration}"/>
 
