--- a/WpfApp1/Views/AddToCinemaList.xaml
+++ b/WpfApp1/Views/AddToCinemaList.xaml
@@ -4,22 +4,37 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1.Views"
+        xmlns:ViewModels="clr-namespace:WpfApp1.ViewModels"
         mc:Ignorable="d"
         Title="AddToCinemaList" Height="550" Width="400">
-    <Grid Background="#FF00175D" Margin="0,0,0,-59">
-        
-        <Label Content="Indtast FIlm" HorizontalAlignment="Center" Margin="0,34,0,0" VerticalAlignment="Top" FontSize="30" FontWeight="Bold"/>
-        
-        <TextBox HorizontalAlignment="Center" Margin="0,99,0,0" TextWrapping="Wrap" Text="Biograf" VerticalAlignment="Top" Width="120"/>
-        <TextBox HorizontalAlignment="Center" Margin="0,134,0,0" TextWrapping="Wrap" Text="By" VerticalAlignment="Top" Width="120"/>
-        <TextBox HorizontalAlignment="Center" Margin="0,169,0,0" TextWrapping="Wrap" Text="Title" VerticalAlignment="Top" Width="120"/>
-        <TextBox HorizontalAlignment="Center" TextWrapping="Wrap" Text="Varighed(tilføjer automatisk 30 min oven i til reklamer og rengøring)" VerticalAlignment="Top" Width="120" Margin="0,244,0,0"/>
-        <TextBox HorizontalAlignment="Center" Margin="0,325,0,0" TextWrapping="Wrap" Text="Spilletid" VerticalAlignment="Top" Width="120" />
-        <TextBox HorizontalAlignment="Center" Margin="0,360,0,0" TextWrapping="Wrap" Text="Instruktør" VerticalAlignment="Top" Width="120"/>
-        <TextBox HorizontalAlignment="Center" Margin="0,393,0,0" TextWrapping="Wrap" Text="Premieredato" VerticalAlignment="Top" Width="120" />
-        <TextBox HorizontalAlignment="Center" Margin="0,204,0,0" TextWrapping="Wrap" Text="genre" VerticalAlignment="Top" Width="120"/>
 
-        <Button Content="Tilføj Film" HorizontalAlignment="Center" Margin="0,425,0,0" VerticalAlignment="Top" Height="50" Width="100"/>
+    <Window.DataContext>
+        <ViewModels:CinemaViewModel/>
+    </Window.DataContext>
+
+    <Grid Background="#FF00175D" Margin="0,0,0,-59">
+
+        <Label Content="Indtast Film" HorizontalAlignment="Center" Margin="0,34,0,0" VerticalAlignment="Top" FontSize="30" FontWeight="Bold" Foreground="White"/>
+
+        <TextBox x:Name="txtCinema" HorizontalAlignment="Center" Margin="0,99,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Text="{Binding CinemaName}"/>
+        <TextBox x:Name="txtCity" HorizontalAlignment="Center" Margin="0,134,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Text="{Binding City}"/>
+        <TextBox x:Name="txtTitle" HorizontalAlignment="Center" Margin="0,169,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="120" Text="{Binding Title}"/>
+        <TextBox x:Name="txtDuration" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Margin="0,244,0,0" Height="62"/>
+        <TextBox x:Name="txtDate" HorizontalAlignment="Center" Margin="0,325,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Text="{Binding Date}"/>
+        <TextBox x:Name="txtinstructor" HorizontalAlignment="Center" Margin="0,360,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Text="{Binding Instructor}"/>
+        <TextBox x:Name="txtPremier" HorizontalAlignment="Center" Margin="0,393,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Text="{Binding Premier}" />
+        <TextBox x:Name="txtGenre" HorizontalAlignment="Center" Margin="0,204,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Text="{Binding Genre}"/>
+
+        <Button x:Name="btnsavecinema" Content="Tilføj Film" HorizontalAlignment="Center" Margin="0,425,0,0" VerticalAlignment="Top" Height="50" Width="100" Click="Button_Click" Command="{Binding AddCinemaCommand}"/>
+        
+        <Label x:Name="lbltitel" Content="Titel" HorizontalAlignment="Left" Margin="98,165,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.098,0.374" Foreground="White"/>
+        <Label x:Name="lblCinema" Content="Biograf&#xD;&#xA;" HorizontalAlignment="Left" Margin="83,96,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.098,0.374" Foreground="White"/>
+        <Label x:Name="lblCity" Content="By" HorizontalAlignment="Left" Margin="105,130,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.098,0.374" Foreground="White"/>
+        <Label x:Name="lblGenre" Content="Genre" HorizontalAlignment="Left" Margin="93,200,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.098,0.374" Foreground="White"/>
+        <Label x:Name="lblDuration" Content="Varighed i minutter&#xD;&#xA; tilføjer automatisk &#xD;&#xA;30 min til&#xD;&#xA; reklamer og&#xD;&#xA; rengøring&#xA;" HorizontalAlignment="Left" Margin="10,236,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.098,0.374" Foreground="White" Height="92" Width="118"/>
+        <Label x:Name="lblDate" Content="Spilletid d/m/å 00:00" HorizontalAlignment="Left" Margin="11,321,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.098,0.374" Foreground="White"/>
+        <Label x:Name="lblinstructor" Content="Instruktør" HorizontalAlignment="Left" Margin="74,356,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.098,0.374" Foreground="White"/>
+        <Label x:Name="lblpremier" Content="Premieredato" HorizontalAlignment="Left" Margin="54,389,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.098,0.374" Foreground="White"/>
 
     </Grid>
 </Window>
